create github pages

--- a/hito2.html
+++ b/hito2.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple site maker</a></section><section class="header3 cid-sffr06hUzV mbr-fullscreen" id="header3-ee">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own website</a></section><section class="header3 cid-sffr06hUzV mbr-fullscreen" id="header3-ee">
 
     
 
@@ -85,7 +85,7 @@
             <div class="col-md-12 col-lg-10">
                 
                 <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5"><strong>
-                    Recapitulación</strong></h4>
+                    Resumen del trabajo grupal</strong></h4>
                 <p class="mbr-text mbr-fonts-style display-7">
                     A continuación se muestra un mapa mental que elaboramos para resumir nuestro avance hasta ahora.&nbsp;</p>
             </div>
@@ -102,9 +102,9 @@
         <div class="row justify-content-center">
             <div class="col-12 col-lg-10">
                 <div class="image-wrapper">
-                    <img src="assets/images/resumen-de-todo-1-1751x1205.jpg" alt="Mobirise">
+                    <div style="width: 100%;"><div style="position: relative; padding-bottom: 66.25%; padding-top: 0; height: 0;"><iframe frameborder="0" width="1194" height="791" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://view.genial.ly/5fa1caaba0c6180d0a1e83e6" type="text/html" allowscriptaccess="always" allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div> </div>
                     <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">
-                        Elaborado en lucidchart</p>
+                        Elaborado en Genially</p>
                 </div>
             </div>
         </div>
@@ -120,7 +120,7 @@
                 <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5"><strong>
                     Diagrama modular</strong></h4>
                 <p class="mbr-text mbr-fonts-style display-7">
-                    En el diagrama modular que se ve a continuación, definimos como módulo principal a aquel que contiene todo el hardware de nuestro dispositivo. Es decir, a la banda. El primer submódulo es el de <strong>soporte</strong>, que permite que todos los componentes electrónicos se mantengan fijos en su lugar ya definido. Dentro de este definimos cuatro subódulos: el energético, responsable de la alimentación eléctrica al dispositivo; el de <strong>adquisición</strong>, donde se reciben las señales; el de <strong>procesamiento</strong>, que recibe las señales y las convierte en información; y el de <strong>transmisón/recepción</strong>, mediante el cual se envían los datos adquiridos al dispositivo móvil para que el usuario los vea.<br><br>Por otro lado, definimos a la aplicación cómo módulo secundario.&nbsp; Esto porque el dispositivo podría leer la medición y analizar todos los datos sin necesidad de la aplicación, que solo sirve para mostrarlos. Dentro de este también hay 4 submódulos:<br>-<strong>Transmisión/adquisición</strong>, que recibe la información registrada mediante los sensores. Y, de ser necesario, envía señales para permitir la vincluación dispositivo-aplicación.<br>-<strong>Procesamiento interno</strong>, el cual procesa los datos recibidos para que el usuario pueda verlos.<br>-<strong>Almacenamiento</strong>, que guarda la información recibida en la memoria interna del celular para su posterior visualización cuando se lo requiera.<br>-<strong>Visualización</strong>, submódulo responsable de mostrar a usuario todos los datos. Esto se realiza mediante la interfaz del dispositivo móvil.</p>
+                    En el diagrama modular que se ve a continuación, definimos como módulo principal a aquel que contiene todo el hardware de nuestro dispositivo. Es decir, a la banda. El primer submódulo es el&nbsp;<strong>energético</strong>, responsable de la alimentación eléctrica al dispositivo; el de <strong>adquisición</strong>, donde se reciben las señales; el de <strong>procesamiento</strong>, que recibe las señales y las convierte en información; y el de <strong>transmisón/recepción</strong>, mediante el cual se envían los datos adquiridos al dispositivo móvil para que el usuario los vea.<br><br>Por otro lado, definimos a la aplicación cómo módulo secundario.&nbsp; Esto porque el dispositivo podría leer la medición y analizar todos los datos sin necesidad de la aplicación, que solo sirve para mostrarlos. Dentro de este también hay 4 submódulos:<br>-<strong>Transmisión/adquisición</strong>, que recibe la información registrada mediante los sensores. Y, de ser necesario, envía señales para permitir la vincluación dispositivo-aplicación.<br>-<strong>Procesamiento interno</strong>, el cual procesa los datos recibidos para que el usuario pueda verlos.<br>-<strong>Almacenamiento</strong>, que guarda la información recibida en la memoria interna del celular para su posterior visualización cuando se lo requiera.<br>-<strong>Visualización</strong>, submódulo responsable de mostrar a usuario todos los datos. Esto se realiza mediante la interfaz del dispositivo móvil.</p>
             </div>
         </div>
     </div>
@@ -135,7 +135,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-lg-10">
                 <div class="image-wrapper">
-                    <img src="assets/images/modular-y-casos-de-uso-diagrama-modular-1836x662.jpg" alt="Mobirise">
+                    <img src="assets/images/modular-y-casos-de-uso-diagrama-modular-1-1836x662.jpg" alt="Mobirise">
                     <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">
                         Elaboración propia</p>
                 </div>
