create github pages

--- a/hito2.html
+++ b/hito2.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own website</a></section><section class="header3 cid-sffr06hUzV mbr-fullscreen" id="header3-ee">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="header3 cid-sffr06hUzV mbr-fullscreen" id="header3-ee">
 
     
 
@@ -87,7 +87,7 @@
                 <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5"><strong>
                     Resumen del trabajo grupal</strong></h4>
                 <p class="mbr-text mbr-fonts-style display-7">
-                    A continuación se muestra un mapa mental que elaboramos para resumir nuestro avance hasta ahora.&nbsp;</p>
+                    A continuación se muestra un mapa mental que elaboramos para resumir nuestro avance hasta ahora. Incluye el problema, estrategia, concepto y algunos bocetos&nbsp; que realizamos.</p>
             </div>
         </div>
     </div>
