--- a/hito2.html
+++ b/hito2.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="header8 cid-sfoHVjtXYb mbr-fullscreen mbr-parallax-background" id="header8-eq">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="header8 cid-sfoHVjtXYb mbr-fullscreen mbr-parallax-background" id="header8-eq">
     
 
     <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(143, 58, 164);"></div>
@@ -150,7 +150,8 @@
                 
                 <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5"><strong>
                     Diagrama de casos de uso</strong></h4>
-                <p class="mbr-text mbr-fonts-style display-7">En este se muestra cómo el usuario interactúa con la aplicación y el dispositivo.&nbsp; Las primeras acciones que debe hacer son registrarse y tomar las mediciones (saturación de oxígeno, temperatura y frecuencia cardiaca). La primera acción incluye sincronización con el dispositivo y guardar los datos de la medición. A partir de la otras acciones, se registran los datos y muestra un gráfico con la evolución del paciente. Además, se evalúa la posibilidad de enviar una alerta según los valores adquiridos.</p>
+                <p class="mbr-text mbr-fonts-style display-7">En este esquema se muestra cómo el usuario interactúa con la aplicación y el dispositivo. Dentro de sus primeras acciones, se encuentran el registro de datos y toma de mediciones (saturación de oxígeno, temperatura y frecuencia cardiaca). Además, incluye la sincronización con el dispositivo y guardar datos de cada medición. 
+Asimismo, se muestra un gráfico con la evolución del paciente. Y se evalúa la posibilidad de enviar una alerta según valores adquiridos.&nbsp;<br></p>
             </div>
         </div>
     </div>
@@ -165,7 +166,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-lg-10">
                 <div class="image-wrapper">
-                    <img src="assets/images/modular-y-casos-de-uso-diagrama-casos-de-uso-1836x1485.jpg" alt="Mobirise">
+                    <img src="assets/images/modular-y-casos-de-uso-diagrama-casos-de-uso-1-1836x1485.jpg" alt="Mobirise">
                     <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">
                         Elaboración propia</p>
                 </div>
