--- a/entregable7.html
+++ b/entregable7.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create your own site for free</a></section><section class="header2 cid-sdNgiWJ9hv mbr-fullscreen mbr-parallax-background" id="header2-e1">
+<section class="engine"><a href="https://mobirise.info/e">how to make a website</a></section><section class="header2 cid-sdNgiWJ9hv mbr-fullscreen mbr-parallax-background" id="header2-e1">
 
     
 
