create github pages

--- a/entregable9.html
+++ b/entregable9.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free website templates</a></section><section class="header6 cid-sfTogYCkWw mbr-fullscreen" id="header6-et">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="header6 cid-sfTogYCkWw mbr-fullscreen" id="header6-et">
 
     
 
@@ -235,7 +235,7 @@ Nuestro prototipo considerará a la altura en m.s.n.m para el cálculo de SpO2, 
         <div class="row align-items-center">
             <div class="col-12 col-lg-7">
                 <div class="image-wrapper">
-                    <img src="assets/images/mit-app-inventor2-1039x586.jpg" alt="Mobirise">
+                    <img src="assets/images/mitappinventor-880x492.jpg" alt="Mobirise">
                     <p class="mbr-description mbr-fonts-style pt-2 align-center display-4">Muestra de una captura de pantalla elaborada y la programación detrás de esta.</p>
                 </div>
             </div>
