--- a/entregable7.html
+++ b/entregable7.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="header2 cid-sdNgiWJ9hv mbr-fullscreen mbr-parallax-background" id="header2-e1">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header2 cid-sdNgiWJ9hv mbr-fullscreen mbr-parallax-background" id="header2-e1">
 
     
 
