--- a/informacion_general.html
+++ b/informacion_general.html
@@ -139,11 +139,11 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide" id="sfXSg7wTya" data-interval="5000">
+                <div class="carousel slide" id="sg2FDpxZjS" data-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" class="active" data-target="#sfXSg7wTya"></li>
-                        <li data-slide-to="1" data-target="#sfXSg7wTya"></li><li data-slide-to="2" data-target="#sfXSg7wTya"></li>
+                        <li data-slide-to="0" class="active" data-target="#sg2FDpxZjS"></li>
+                        <li data-slide-to="1" data-target="#sg2FDpxZjS"></li><li data-slide-to="2" data-target="#sg2FDpxZjS"></li>
                         
                     </ol>
                     <div class="carousel-inner">
@@ -185,11 +185,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#sfXSg7wTya">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#sg2FDpxZjS">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#sfXSg7wTya">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#sg2FDpxZjS">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
