--- a/entregable9.html
+++ b/entregable9.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="header6 cid-sfTogYCkWw mbr-fullscreen" id="header6-et">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own site for free</a></section><section class="header6 cid-sfTogYCkWw mbr-fullscreen" id="header6-et">
 
     
 
@@ -99,7 +99,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-12">
-                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5"><strong>Consideramos la varible de m.s.n.m:</strong><strong><br></strong></h3>
+                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5"><strong>Consideramos la variable de m.s.n.m:</strong><strong><br></strong></h3>
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7">Dado que existen parámetros fisiológicos, como la saturación de oxígeno arterial o SpO2, que experimentan variaciones por variables externas, hemos considerado oportuno realizar modificaciones. 
 Nuestro prototipo considerará a la altura en m.s.n.m para el cálculo de SpO2, utilizando una fórmula matemática en función de la altura. 
 <br><br><strong>SaO2 = 98,2171 + 0,0012·h – 0,0000008·h²
@@ -212,7 +212,7 @@ Nuestro prototipo considerará a la altura en m.s.n.m para el cálculo de SpO2, 
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style display-2"><strong>Prototipo 2</strong></h6>
                         <p class="mbr-text mbr-fonts-style mb-4 display-4">
-                            Mediante el programa Figma, se realizaron mejoras a las capturas de pantalla presentadas previamente.<strong> Se inicia como si fuera la segunda vez</strong> que el usuario usa la aplicación, es decir con el menú principal. Esto aplica también a las siguientes veces que el usuario ingresará.&nbsp;<br><br>Puede intectuar con la aplicación tocando los botones.</p>
+                            Mediante el programa Figma, se realizaron mejoras a las capturas de pantalla presentadas previamente.<strong> Se inicia como si fuera la segunda vez</strong> que el usuario usa la aplicación, es decir con el menú principal. Esto aplica también a las siguientes veces que el usuario ingresará.&nbsp;<br><br>Puede interactuar con la aplicación tocando los botones.</p>
                         
                     </div>
                 </div>
@@ -235,15 +235,15 @@ Nuestro prototipo considerará a la altura en m.s.n.m para el cálculo de SpO2, 
         <div class="row align-items-center">
             <div class="col-12 col-lg-7">
                 <div class="image-wrapper">
-                    <img src="assets/images/mitappinventor-880x492.jpg" alt="Mobirise">
-                    <p class="mbr-description mbr-fonts-style pt-2 align-center display-4">Muestra de una captura de pantalla elaborada y la programación detrás de esta.</p>
+                    <img src="assets/images/firebase-716x563.jpg" alt="Mobirise">
+                    <p class="mbr-description mbr-fonts-style pt-2 align-center display-4">Muestra del registro de usuarios en Firebase (referencial)</p>
                 </div>
             </div>
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
                     <h3 class="mbr-section-title mbr-fonts-style mb-3 display-2">
                         <strong>Avance del prototipo funcional</strong></h3>
-                    <p class="mbr-text mbr-fonts-style display-7"></p><p>Mediante el sitio web MIT Appinventor 2 se ha empezado la elaboración del prototipo funcional. Esta plataforma usa programación mediante bloques para que el usuario realice las conexiones e interacciones entre los distitnos elementos de la aplicación.&nbsp;</p><br><p>En la imagen a la derecha se puede ver un ejemplo de nuestro avance. Al momento de que el usuario ingrese sus datos para iniciar sesión, el sistema verificará primero que los dos campos estén llenos. Luego, usando la base de datos FirebaseDB1, comprobará que los datos ingresados coincidan con alguno de los ya ingresados al momento de registrarse. De coincidir perimitirá el acceso al menú principal. Sino, dirá que alguno de los datos es incorrecto.&nbsp;</p><br><p><br></p><p></p>
+                    <p class="mbr-text mbr-fonts-style display-7"></p><p>Mediante el sitio web MIT Appinventor 2 se ha empezado la elaboración del prototipo funcional. Esta plataforma usa programación mediante bloques para que el usuario realice las conexiones e interacciones entre los distintos elementos de la aplicación.&nbsp;</p><br><p>En la imagen a la derecha se puede ver un ejemplo de nuestro avance. Al momento de que el usuario ingrese sus datos para iniciar sesión, el sistema verificará primero que los dos campos estén llenos. Luego, usando la base de datos FirebaseDB1, comprobará que los datos ingresados coincidan con alguno de los ya ingresados al momento de registrarse. De coincidir perimitirá el acceso al menú principal. Sino, dirá que alguno de los datos es incorrecto.&nbsp;</p><br><p><br></p><p></p>
                 </div>
             </div>
         </div>
