--- a/nosotros.html
+++ b/nosotros.html
@@ -45,7 +45,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="team1 cid-s9LgHWloWZ" id="team1-y">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="team1 cid-s9LgHWloWZ" id="team1-y">
     
 
     
@@ -363,7 +363,7 @@
             <div class="card col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="image-wrapper">
-                        <span class="mbr-iconfont socicon-mail socicon"></span>
+                        <span class="mbr-iconfont socicon-mail socicon" style="color: rgb(72, 39, 103); fill: rgb(72, 39, 103);"></span>
                     </div>
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style mb-1 display-5">
@@ -375,7 +375,7 @@
             <div class="card col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="image-wrapper">
-                        <span class="mbr-iconfont mobi-mbri-letter mobi-mbri"></span>
+                        <span class="mbr-iconfont mobi-mbri-letter mobi-mbri" style="color: rgb(72, 39, 103); fill: rgb(72, 39, 103);"></span>
                     </div>
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style mb-1 display-5"><strong>Brifscey Chura Quispe</strong></h6>
@@ -386,7 +386,7 @@
             <div class="card col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="image-wrapper">
-                        <span class="mbr-iconfont mobi-mbri-letter mobi-mbri"></span>
+                        <span class="mbr-iconfont mobi-mbri-letter mobi-mbri" style="color: rgb(72, 39, 103); fill: rgb(72, 39, 103);"></span>
                     </div>
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style mb-1 display-5">
@@ -399,7 +399,7 @@
             <div class="card col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="image-wrapper">
-                        <span class="mbr-iconfont socicon-mail socicon"></span>
+                        <span class="mbr-iconfont socicon-mail socicon" style="color: rgb(72, 39, 103); fill: rgb(72, 39, 103);"></span>
                     </div>
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style mb-1 display-5"><strong>Adrián Ismael Hernández Vega</strong></h6>
@@ -422,7 +422,7 @@
             <div class="card col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="image-wrapper">
-                        <span class="mbr-iconfont socicon-mail socicon"></span>
+                        <span class="mbr-iconfont socicon-mail socicon" style="color: rgb(72, 39, 103); fill: rgb(72, 39, 103);"></span>
                     </div>
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style mb-1 display-5">
@@ -434,7 +434,7 @@
             <div class="card col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="image-wrapper">
-                        <span class="mbr-iconfont mobi-mbri-letter mobi-mbri"></span>
+                        <span class="mbr-iconfont mobi-mbri-letter mobi-mbri" style="color: rgb(72, 39, 103); fill: rgb(72, 39, 103);"></span>
                     </div>
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style mb-1 display-5">
