create github pages

--- a/hito2.html
+++ b/hito2.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><section class="header8 cid-sfoHVjtXYb mbr-fullscreen mbr-parallax-background" id="header8-eq">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="header8 cid-sfoHVjtXYb mbr-fullscreen mbr-parallax-background" id="header8-eq">
     
 
     <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(143, 58, 164);"></div>
