create github pages

--- a/page19.html
+++ b/page19.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section class="header3 cid-shoECRrdiD mbr-fullscreen" id="header3-gk">
+<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="header3 cid-shoECRrdiD mbr-fullscreen" id="header3-gk">
 
     
 
@@ -380,7 +380,7 @@
                 </div>
             </div>
             <div class="card col-12 col-md-6">
-                <p class="mbr-text mbr-fonts-style mb-4 display-7">1.-&nbsp;&nbsp;<br>2.- Un material respirable, que no haga sudar.<br>3.- Sí, se ve agradable. Aunque también podría ser una pulsera.<br>4.-&nbsp; Sí.<br>5.-&nbsp;<br>6.-&nbsp;</p>
+                <p class="mbr-text mbr-fonts-style mb-4 display-7">1.-&nbsp; Me parece correcta.<br>2.- Un material respirable, que no haga sudar.<br>3.- Sí, se ve agradable. Aunque también podría ser una pulsera.<br>4.-&nbsp; Sí. Pero deben dar varias indicaciones para su uso.<br>5.-&nbsp; Para usuarios adultos mayores, implementar una voz que que les guíe durante el uso de la aplicación. Esto para brindar mayores facilidades.<br>6.-&nbsp; Me parece una buena idea, igualmente con la voz.</p>
                 <div class="d-flex mb-md-0 mb-4">
                     <div class="image-wrapper">
                         <img src="assets/images/mbr-100x98.png" alt="Mobirise">
