create github pages

--- a/page19.html
+++ b/page19.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="header3 cid-shoECRrdiD mbr-fullscreen" id="header3-gk">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header3 cid-shoECRrdiD mbr-fullscreen" id="header3-gk">
 
     
 
@@ -448,13 +448,13 @@
                 </div>
             </div>
             <div class="card col-12 col-md-6">
-                <p class="mbr-text mbr-fonts-style mb-4 display-7">1.-&nbsp; Sí me parece que la saturación de oxígeno nos puede dar buena noción de su estado de salud.<br>2.-&nbsp;Creo q sería mejor de una resina o plástico para la desinfección.<br>3.-&nbsp;Si sería cómodo y seguro, ya que permite que se use sin quitarse la mascarilla.<br>4.-&nbsp;Todo lo que permita hacer un diagnóstico precoz, tendría un imoacto económico importante.</p>
+                <p class="mbr-text mbr-fonts-style mb-4 display-7">1.-&nbsp; Claro porque tanto la Spo2 como la frecuencia cardiaca indica mucho sobre su estado de salud. Lo de la temperatura, en realidad es poco relevante pero no se puede descartar. <br>2.-&nbsp;Algo que no incomode asi como almohadillas. Principalmente, que brinde comodidad y que no pese. <br>3.-&nbsp;Siempre y cuando sea algo que no pese, podria asumirlo como si portase un gorro.<br>4.-&nbsp;Radicaría en observar el costo de los componentes, principalmente sobre sensores.<br>5.- Cambiar preguntas como "¿Estas seguro/a?" o "¿Es este tu dispositivo?". Aclarar mejor la parte de historial. Y como sugerencia , ubicar la parte de "Consejos" en el borde superior derecho como botón "i". <br>6.-&nbsp;Me parece que es un buen plus al dispositivo. </p>
                 <div class="d-flex mb-md-0 mb-4">
                     <div class="image-wrapper">
                         <img src="assets/images/mbr-100x98.png" alt="Mobirise">
                     </div>
                     <div class="text-wrapper">
-                        <p class="name mbr-fonts-style mb-1 display-4"><strong>María Elena Howard</strong></p>
+                        <p class="name mbr-fonts-style mb-1 display-4"><strong>Juan Huamán</strong></p>
                         
                     </div>
                 </div>
