create github pages

--- a/page19.html
+++ b/page19.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header3 cid-shoECRrdiD mbr-fullscreen" id="header3-gk">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="header3 cid-shoECRrdiD mbr-fullscreen" id="header3-gk">
 
     
 
@@ -245,7 +245,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-lg-10">
                 <div class="image-wrapper">
-                    <iframe src="https://create.arduino.cc/editor/adrianhv/a98c5a20-5dfe-49eb-84cb-6f4cb97de5ce/preview?embed" style="height:510px;width:100%;margin:10px 0" frameborder="0"></iframe>
+                    <iframe src="https://create.arduino.cc/editor/adrianhv/0a1827b7-fe40-4aaf-8c8e-4ea00635f123/preview?embed" style="height:510px;width:100%;margin:10px 0" frameborder="0"></iframe>
                     <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">
                         Código de frecuencia cardiaca</p>
                 </div>
@@ -302,7 +302,7 @@
             </div>
             <div class="col-12 col-lg-6">
                 <div class="image-wrapper">
-                    <img src="assets/images/simulacion-ppm-737x587.png" alt="Mobirise">
+                    <img src="assets/images/simulacion-ppm-ahora-si-731x540.png" alt="Mobirise">
                     <p class="mbr-text mbr-fonts-style mt-2 align-center display-4">Simulación ppm elaborada en proteus</p>
                 </div>
             </div>
